
Version 1.3.1.1
 - Fix Bug in Pawned Item Computation
 - Fix Pawn_list View Full Address
 - Fix No Display Pawner Name in Triplicate
 - Fix Amount To Words Indian Language
 - Fix No Appraiser Display in PT
 - Fix Display of PT Information in Pawning
 - Fix Bug in Displaying Pawning History
 - Fix Error in Journal Redemption
 - Add Efeective interest Rate in percent in PT Layout

Version 1.3.1
 - Fix Reprint Save
 - Fix ORNum and ORDate on database
 - Fix Wrong Printing OR information
 - Fix bug in Loan Register
 - Fix not displaying Old and New PT in OR receipt
 - Fix double entry in saving void transaction
 - Fix New Pawnticket issue on OR Numbers
 - Included Transaction number in remarks in every void transaction
 - Removed Checking Authorization in every renew
 - Added Remarks field in table OTP
 - Added Tables OPI, PI1, OPT, TBLITEM, TBLSPECS, TBLINTSCHEMES, TBLINTSCHEME_DETAILS
 - Added View PAWN_LIST

Version 1.2.3.9
 - Requires OTP alone in Pullout Module, nullify the privilege 
 - Fix Expiry Generator, get whole month

Version 1.2.3.7
 - Add Audit Console (Base on Maam Irish Needs)
 - Add RePrint indicator on PT and OR
 - Add Disable User Account
 - Add Void Report
 - Add Data Extractor
 - No Posting if No Entries, place atleast zero (0) value
 - Fix Pawning Bug
 - Fix Minor Problems on Journal Entries
 - Fix on Displaying Computation
 - Fix Redeem Report
 - Fix Minor Journal Entry Problem
 - Fix Item Pullout Report Date Problem
 - Fix Redemption Report Summary
 - Fix Load Report Void display
 - Sanitize fields

Version 1.2.2.12
 - Add Change Password
 - Add New Privileges
 - Include Appraiser
 - Include Reset Password
 - Include Advance Report
 - Include Delete User in User Management
 - Include Item Type Selection on Audit Report
 - Fix Report Money Transfer, Cash In/Out, Dollar (Void Item Display)

Version 1.2.2.9
 - Fix Monthly computation for Cellphone
 - Fix Journal Entry Summary
 - Fix Money Transfer Send In/Payout Name