@@ -35,23 +35,29 @@ Partial Class frmAuditConsole
         Me.Label1 = New System.Windows.Forms.Label()
         Me.MonVault = New System.Windows.Forms.MonthCalendar()
         Me.GroupBox3 = New System.Windows.Forms.GroupBox()
-        Me.Label4 = New System.Windows.Forms.Label()
-        Me.txtEmail = New System.Windows.Forms.TextBox()
-        Me.btnGenerate = New System.Windows.Forms.Button()
-        Me.Label5 = New System.Windows.Forms.Label()
-        Me.Label6 = New System.Windows.Forms.Label()
-        Me.txtManual = New System.Windows.Forms.TextBox()
         Me.txtQRURL = New System.Windows.Forms.TextBox()
+        Me.txtManual = New System.Windows.Forms.TextBox()
+        Me.Label6 = New System.Windows.Forms.Label()
+        Me.Label5 = New System.Windows.Forms.Label()
+        Me.btnGenerate = New System.Windows.Forms.Button()
+        Me.txtEmail = New System.Windows.Forms.TextBox()
+        Me.Label4 = New System.Windows.Forms.Label()
+        Me.TabControl1 = New System.Windows.Forms.TabControl()
+        Me.TabPage1 = New System.Windows.Forms.TabPage()
+        Me.TabPage2 = New System.Windows.Forms.TabPage()
         Me.GroupBox1.SuspendLayout()
         Me.GroupBox2.SuspendLayout()
         Me.GroupBox3.SuspendLayout()
+        Me.TabControl1.SuspendLayout()
+        Me.TabPage1.SuspendLayout()
+        Me.TabPage2.SuspendLayout()
         Me.SuspendLayout()
         '
         'GroupBox1
         '
         Me.GroupBox1.Controls.Add(Me.btnCCSheet)
         Me.GroupBox1.Controls.Add(Me.btnCashCount)
-        Me.GroupBox1.Location = New System.Drawing.Point(12, 12)
+        Me.GroupBox1.Location = New System.Drawing.Point(6, 6)
         Me.GroupBox1.Name = "GroupBox1"
         Me.GroupBox1.Size = New System.Drawing.Size(467, 105)
         Me.GroupBox1.TabIndex = 3
@@ -87,7 +93,7 @@ Partial Class frmAuditConsole
         Me.GroupBox2.Controls.Add(Me.Label2)
         Me.GroupBox2.Controls.Add(Me.Label1)
         Me.GroupBox2.Controls.Add(Me.MonVault)
-        Me.GroupBox2.Location = New System.Drawing.Point(12, 123)
+        Me.GroupBox2.Location = New System.Drawing.Point(6, 117)
         Me.GroupBox2.Name = "GroupBox2"
         Me.GroupBox2.Size = New System.Drawing.Size(467, 220)
         Me.GroupBox2.TabIndex = 4
@@ -100,7 +106,7 @@ Partial Class frmAuditConsole
         Me.cboType.FormattingEnabled = True
         Me.cboType.Location = New System.Drawing.Point(254, 118)
         Me.cboType.Name = "cboType"
-        Me.cboType.Size = New System.Drawing.Size(121, 21)
+        Me.cboType.Size = New System.Drawing.Size(200, 21)
         Me.cboType.TabIndex = 12
         '
         'Label3
@@ -167,90 +173,121 @@ Partial Class frmAuditConsole
         Me.GroupBox3.Controls.Add(Me.btnGenerate)
         Me.GroupBox3.Controls.Add(Me.txtEmail)
         Me.GroupBox3.Controls.Add(Me.Label4)
-        Me.GroupBox3.Location = New System.Drawing.Point(485, 12)
+        Me.GroupBox3.Location = New System.Drawing.Point(6, 6)
         Me.GroupBox3.Name = "GroupBox3"
-        Me.GroupBox3.Size = New System.Drawing.Size(300, 191)
+        Me.GroupBox3.Size = New System.Drawing.Size(477, 155)
         Me.GroupBox3.TabIndex = 5
         Me.GroupBox3.TabStop = False
         Me.GroupBox3.Text = "One-Time Password"
-        '
-        'Label4
-        '
-        Me.Label4.AutoSize = True
-        Me.Label4.Location = New System.Drawing.Point(6, 19)
-        Me.Label4.Name = "Label4"
-        Me.Label4.Size = New System.Drawing.Size(73, 13)
-        Me.Label4.TabIndex = 0
-        Me.Label4.Text = "Email Address"
-        '
-        'txtEmail
-        '
-        Me.txtEmail.Font = New System.Drawing.Font("Microsoft Sans Serif", 9.75!, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, CType(0, Byte))
-        Me.txtEmail.Location = New System.Drawing.Point(9, 35)
-        Me.txtEmail.Name = "txtEmail"
-        Me.txtEmail.Size = New System.Drawing.Size(207, 22)
-        Me.txtEmail.TabIndex = 1
-        Me.txtEmail.Text = "eskie@pgc-itdept.org"
-        '
-        'btnGenerate
-        '
-        Me.btnGenerate.Font = New System.Drawing.Font("Microsoft Sans Serif", 9.75!, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, CType(0, Byte))
-        Me.btnGenerate.Location = New System.Drawing.Point(9, 63)
-        Me.btnGenerate.Name = "btnGenerate"
-        Me.btnGenerate.Size = New System.Drawing.Size(82, 44)
-        Me.btnGenerate.TabIndex = 2
-        Me.btnGenerate.Text = "&Generate"
-        Me.btnGenerate.UseVisualStyleBackColor = True
-        '
-        'Label5
-        '
-        Me.Label5.AutoSize = True
-        Me.Label5.Location = New System.Drawing.Point(16, 134)
-        Me.Label5.Name = "Label5"
-        Me.Label5.Size = New System.Drawing.Size(45, 13)
-        Me.Label5.TabIndex = 3
-        Me.Label5.Text = "Manual:"
-        '
-        'Label6
-        '
-        Me.Label6.AutoSize = True
-        Me.Label6.Location = New System.Drawing.Point(16, 159)
-        Me.Label6.Name = "Label6"
-        Me.Label6.Size = New System.Drawing.Size(32, 13)
-        Me.Label6.TabIndex = 4
-        Me.Label6.Text = "URL:"
-        '
-        'txtManual
-        '
-        Me.txtManual.BackColor = System.Drawing.Color.White
-        Me.txtManual.Font = New System.Drawing.Font("Microsoft Sans Serif", 9.75!, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, CType(0, Byte))
-        Me.txtManual.Location = New System.Drawing.Point(79, 129)
-        Me.txtManual.Name = "txtManual"
-        Me.txtManual.ReadOnly = True
-        Me.txtManual.Size = New System.Drawing.Size(207, 22)
-        Me.txtManual.TabIndex = 5
-        Me.txtManual.Text = "eskie@pgc-itdept.org"
         '
         'txtQRURL
         '
         Me.txtQRURL.BackColor = System.Drawing.Color.White
         Me.txtQRURL.Font = New System.Drawing.Font("Microsoft Sans Serif", 9.75!, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, CType(0, Byte))
         Me.txtQRURL.ForeColor = System.Drawing.SystemColors.WindowText
-        Me.txtQRURL.Location = New System.Drawing.Point(79, 154)
+        Me.txtQRURL.Location = New System.Drawing.Point(98, 73)
         Me.txtQRURL.Name = "txtQRURL"
         Me.txtQRURL.ReadOnly = True
-        Me.txtQRURL.Size = New System.Drawing.Size(207, 22)
+        Me.txtQRURL.Size = New System.Drawing.Size(373, 22)
         Me.txtQRURL.TabIndex = 6
         Me.txtQRURL.Text = "eskie@pgc-itdept.org"
+        '
+        'txtManual
+        '
+        Me.txtManual.BackColor = System.Drawing.Color.White
+        Me.txtManual.Font = New System.Drawing.Font("Microsoft Sans Serif", 9.75!, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, CType(0, Byte))
+        Me.txtManual.Location = New System.Drawing.Point(98, 48)
+        Me.txtManual.Name = "txtManual"
+        Me.txtManual.ReadOnly = True
+        Me.txtManual.Size = New System.Drawing.Size(373, 22)
+        Me.txtManual.TabIndex = 5
+        Me.txtManual.Text = "eskie@pgc-itdept.org"
+        '
+        'Label6
+        '
+        Me.Label6.AutoSize = True
+        Me.Label6.Location = New System.Drawing.Point(16, 78)
+        Me.Label6.Name = "Label6"
+        Me.Label6.Size = New System.Drawing.Size(32, 13)
+        Me.Label6.TabIndex = 4
+        Me.Label6.Text = "URL:"
+        '
+        'Label5
+        '
+        Me.Label5.AutoSize = True
+        Me.Label5.Location = New System.Drawing.Point(16, 53)
+        Me.Label5.Name = "Label5"
+        Me.Label5.Size = New System.Drawing.Size(45, 13)
+        Me.Label5.TabIndex = 3
+        Me.Label5.Text = "Manual:"
+        '
+        'btnGenerate
+        '
+        Me.btnGenerate.Font = New System.Drawing.Font("Microsoft Sans Serif", 9.75!, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, CType(0, Byte))
+        Me.btnGenerate.Location = New System.Drawing.Point(389, 101)
+        Me.btnGenerate.Name = "btnGenerate"
+        Me.btnGenerate.Size = New System.Drawing.Size(82, 44)
+        Me.btnGenerate.TabIndex = 2
+        Me.btnGenerate.Text = "&Generate"
+        Me.btnGenerate.UseVisualStyleBackColor = True
+        '
+        'txtEmail
+        '
+        Me.txtEmail.Font = New System.Drawing.Font("Microsoft Sans Serif", 9.75!, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, CType(0, Byte))
+        Me.txtEmail.Location = New System.Drawing.Point(98, 20)
+        Me.txtEmail.Name = "txtEmail"
+        Me.txtEmail.Size = New System.Drawing.Size(373, 22)
+        Me.txtEmail.TabIndex = 1
+        Me.txtEmail.Text = "eskie@pgc-itdept.org"
+        '
+        'Label4
+        '
+        Me.Label4.AutoSize = True
+        Me.Label4.Location = New System.Drawing.Point(6, 25)
+        Me.Label4.Name = "Label4"
+        Me.Label4.Size = New System.Drawing.Size(73, 13)
+        Me.Label4.TabIndex = 0
+        Me.Label4.Text = "Email Address"
+        '
+        'TabControl1
+        '
+        Me.TabControl1.Controls.Add(Me.TabPage1)
+        Me.TabControl1.Controls.Add(Me.TabPage2)
+        Me.TabControl1.Location = New System.Drawing.Point(6, 5)
+        Me.TabControl1.Name = "TabControl1"
+        Me.TabControl1.SelectedIndex = 0
+        Me.TabControl1.Size = New System.Drawing.Size(497, 371)
+        Me.TabControl1.TabIndex = 6
+        '
+        'TabPage1
+        '
+        Me.TabPage1.Controls.Add(Me.GroupBox1)
+        Me.TabPage1.Controls.Add(Me.GroupBox2)
+        Me.TabPage1.Location = New System.Drawing.Point(4, 22)
+        Me.TabPage1.Name = "TabPage1"
+        Me.TabPage1.Padding = New System.Windows.Forms.Padding(3)
+        Me.TabPage1.Size = New System.Drawing.Size(489, 345)
+        Me.TabPage1.TabIndex = 0
+        Me.TabPage1.Text = "Audit"
+        Me.TabPage1.UseVisualStyleBackColor = True
+        '
+        'TabPage2
+        '
+        Me.TabPage2.Controls.Add(Me.GroupBox3)
+        Me.TabPage2.Location = New System.Drawing.Point(4, 22)
+        Me.TabPage2.Name = "TabPage2"
+        Me.TabPage2.Padding = New System.Windows.Forms.Padding(3)
+        Me.TabPage2.Size = New System.Drawing.Size(489, 345)
+        Me.TabPage2.TabIndex = 1
+        Me.TabPage2.Text = "Access Code"
+        Me.TabPage2.UseVisualStyleBackColor = True
         '
         'frmAuditConsole
         '
         Me.AutoScaleDimensions = New System.Drawing.SizeF(6.0!, 13.0!)
         Me.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font
-        Me.ClientSize = New System.Drawing.Size(800, 352)
-        Me.Controls.Add(Me.GroupBox3)
-        Me.Controls.Add(Me.GroupBox2)
-        Me.Controls.Add(Me.GroupBox1)
+        Me.ClientSize = New System.Drawing.Size(508, 380)
+        Me.Controls.Add(Me.TabControl1)
         Me.FormBorderStyle = System.Windows.Forms.FormBorderStyle.FixedSingle
         Me.Icon = CType(resources.GetObject("$this.Icon"), System.Drawing.Icon)
         Me.MaximizeBox = False
@@ -262,6 +299,9 @@ Partial Class frmAuditConsole
         Me.GroupBox2.PerformLayout()
         Me.GroupBox3.ResumeLayout(False)
         Me.GroupBox3.PerformLayout()
+        Me.TabControl1.ResumeLayout(False)
+        Me.TabPage1.ResumeLayout(False)
+        Me.TabPage2.ResumeLayout(False)
         Me.ResumeLayout(False)
 
     End Sub
@@ -284,4 +324,7 @@ Partial Class frmAuditConsole
     Friend WithEvents btnGenerate As System.Windows.Forms.Button
     Friend WithEvents txtEmail As System.Windows.Forms.TextBox
     Friend WithEvents Label4 As System.Windows.Forms.Label
+    Friend WithEvents TabControl1 As System.Windows.Forms.TabControl
+    Friend WithEvents TabPage1 As System.Windows.Forms.TabPage
+    Friend WithEvents TabPage2 As System.Windows.Forms.TabPage
 End Class
