@@ -26,6 +26,7 @@ Version 1.3.1.1
  - Fix Bug in Displaying Pawning History
  - Fix Error in Journal Redemption
  - Add Efeective interest Rate in percent in PT Layout
+ - Change Audit Console Layout
 
 Version 1.3.1
  - Fix Reprint Save
